--- a/src/styles/global/global.scss
+++ b/src/styles/global/global.scss
@@ -31,18 +31,6 @@ $desktop-large: 1350px;
   }
 }
 
-#topbar {
-  overflow: hidden !important;
-  svg * {
-    cursor: pointer;
-    transition: all 0.5s;
-    box-shadow: 4px 9px 31px -19px $color__black;
-    .App--dark & {
-      fill: $color__white;
-      box-shadow: 4px 9px 31px -19px $color__white;
-    }
-  }
-}
 @media only screen and (min-width: 700px) {
   #topBar {
     visibility: hidden;
